--- a/app/src/main/res/layout-v28/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout-v28/activity_sign_up_valid.xml
@@ -35,7 +35,7 @@
             android:layout_marginLeft="18dp"
             android:fontFamily="@font/montserrat"
             android:lineHeight="20dp"
-            android:text="@string/create_your_account_string"
+            android:text="Create Your Account"
             android:textColor="@color/black"
             android:textFontWeight="700"
             android:textSize="16sp" />
@@ -69,7 +69,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/full_name_string"
+            android:hint="Full Name"
             android:padding="10dp"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
@@ -103,7 +103,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/email_id_string"
+            android:hint="Email Id"
             android:padding="10dp"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
@@ -140,7 +140,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/password_string"
+            android:hint="Password"
             android:padding="10dp"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
@@ -186,7 +186,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="@string/confirm_password_string"
+            android:hint="Confirm Password"
             android:padding="10dp"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
