--- a/app/src/main/res/layout/login_sign_up_button.xml
+++ b/app/src/main/res/layout/login_sign_up_button.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="38dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:text="Sign Up"
     android:textAllCaps="false"
     android:layout_marginLeft="83dp"
-    android:layout_marginRight="81d"
+    android:layout_marginRight="81dp"
     android:textColor="@color/white"
     android:layout_marginTop="28dp"
     android:layout_gravity="center_horizontal"
     android:backgroundTint="@color/button_blue"
     android:insetTop="0dp"
     android:insetBottom="0dp"
-    app:cornerRadius="5dp">
+    app:cornerRadius="5dp"
+    android:textFontWeight="700"
+    android:letterSpacing="0.03"
+    android:textSize="14dp">
 
 </Button>
