--- a/app/src/main/res/layout/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout/activity_sign_up_valid.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp_Valid"
+    android:background="#E5E5E5"
     android:orientation="vertical"
-    android:background="#E5E5E5">
+    tools:context=".SignUp_Valid">
 
     <ImageView
         android:layout_width="164dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
         android:layout_gravity="center_horizontal"
-        android:src="@mipmap/shoppre_logo" 
-        android:contentDescription="Shoppre Logo"/>
+        android:layout_marginTop="48dp"
+        android:contentDescription="Shoppre Logo"
+        android:src="@mipmap/shoppre_logo" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,11 +23,11 @@
         android:layout_marginTop="53dp">
 
         <ImageView
+            android:id="@+id/backArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/back_arrow"
-            android:id="@+id/backArrow"
-            android:contentDescription="BAck Arrow"/>
+            android:contentDescription="BAck Arrow"
+            android:src="@drawable/back_arrow" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,9 +44,9 @@
     </LinearLayout>
 
 
-    <com.google.android.material.textfield.TextInputLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
 
+        android:id="@+id/fullName"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,26 +63,24 @@
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        android:id="@+id/fullName"
-        >
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/full_name_string"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"
-            />
+            app:boxStrokeColor="@color/box_background_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
 
 
+        android:id="@+id/emailId"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -99,24 +97,24 @@
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        android:id="@+id/emailId">
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/email_id_string"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"/>
+            app:boxStrokeColor="@color/box_background_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
 
 
+        android:id="@+id/password"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -134,38 +132,38 @@
         app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
-        android:id="@+id/password"
 
-        app:endIconContentDescription="password field"
         >
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/password_string"
+            android:inputType="textPassword"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"
-
-            android:drawableRight="@drawable/ic_strong"/>
+            app:boxStrokeColor="@color/box_background_color" />
     </com.google.android.material.textfield.TextInputLayout>
-   <TextView
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="@string/helper_text"
-       android:layout_gravity="center_horizontal"
-       android:layout_marginTop="4dp"
-       android:layout_marginLeft="40dp"
-       android:layout_marginRight="38dp"
-       android:textColor="@color/hint_color"
-       android:textSize="10sp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginRight="38dp"
+        android:text="@string/helper_text"
+        android:textColor="@color/hint_color"
+        android:textSize="10sp" />
 
     <com.google.android.material.textfield.TextInputLayout
 
 
+        android:id="@+id/confirmPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -182,24 +180,24 @@
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        android:id="@+id/confirmPassword">
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="@string/confirm_password_string"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"/>
+            app:boxStrokeColor="@color/box_background_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
 
 
+        android:id="@+id/referalCode"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -215,43 +213,41 @@
         app:boxStrokeColor="@color/box_background_color"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        android:id="@+id/referalCode"
-
         app:endIconContentDescription="password field"
-        >
+        app:hintAnimationEnabled="false"
+
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:drawableRight="@drawable/ic_strong"
             android:hint="CHRI434"
+            android:letterSpacing="0.03"
             android:padding="10dp"
+            android:singleLine="true"
             android:textColor="@color/hint_color"
             android:textColorHint="@color/black"
             android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color"
-            android:singleLine="true"
-            android:letterSpacing="0.03"
 
-            android:drawableRight="@drawable/ic_strong"/>
+            app:boxStrokeColor="@color/box_background_color" />
     </com.google.android.material.textfield.TextInputLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/by_signing_"
         android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="28dp"
 
-        android:layout_marginLeft="40dp"
         android:layout_marginRight="38dp"
+        android:text="@string/by_signing_"
         android:textColor="@color/hint_color"
-        android:textSize="10sp"/>
+        android:textSize="10sp" />
 
     <include
-        layout="@layout/login_sign_up_button"
-        android:id="@+id/signUpBtn"/>
+        android:id="@+id/signUpBtn"
+        layout="@layout/login_sign_up_button" />
 
-    
 
 </LinearLayout>
