--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -67,7 +67,7 @@
             android:layout_height="match_parent"
             android:hint="@string/email_id_string"
             android:padding="10dp"
-            android:textColor="@color/hint_color"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
             app:boxStrokeColor="@color/box_background_color"
