--- a/app/src/main/res/layout/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout/activity_sign_up_valid.xml
@@ -60,8 +60,8 @@
         app:boxCornerRadiusTopEnd="5dp"
         app:boxCornerRadiusTopStart="5dp"
         app:boxStrokeColor="@color/box_background_color"
+        app:errorEnabled="true"
         app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false">
 
@@ -71,7 +71,7 @@
             android:hint="@string/full_name_string"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/hint_color"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
             app:boxStrokeColor="@color/box_background_color" />
@@ -92,10 +92,10 @@
         app:boxCornerRadiusBottomEnd="5dp"
         app:boxCornerRadiusBottomStart="5dp"
         app:boxCornerRadiusTopEnd="5dp"
+        app:boxStrokeWidth="0dp"
         app:boxCornerRadiusTopStart="5dp"
         app:boxStrokeColor="@color/box_background_color"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
+        app:errorEnabled="true"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false">
 
@@ -105,54 +105,61 @@
             android:hint="@string/email_id_string"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/hint_color"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
             app:boxStrokeColor="@color/box_background_color" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-
-
-        android:id="@+id/password"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        app:strokeColor="@color/box_background_color"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="28dp"
         android:layout_marginRight="38dp"
-        app:boxBackgroundColor="@color/box_background_color"
-        app:boxCornerRadiusBottomEnd="5dp"
-        app:boxCornerRadiusBottomStart="5dp"
-        app:boxCornerRadiusTopEnd="5dp"
-        app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="@color/box_background_color"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
+        app:cardBackgroundColor="@color/box_background_color"
+        android:layout_marginTop="22dp"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="0dp">
 
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/passwordEditText"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:hint="@string/password_string"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:singleLine="true"
-            android:textColor="@color/hint_color"
-            android:textColorHint="@color/hint_color"
-            android:textSize="12sp"
-            app:boxStrokeColor="@color/box_background_color" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/passwordField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:layout_weight="0.6"
+                android:hint="Password"
+                android:textColorHint="@color/hint_color"
+                android:paddingLeft="13dp"
+                android:paddingBottom="12dp"
+                android:layout_gravity="center"
+                android:paddingTop="11dp"
+                android:textColor="@color/black"
+                android:textSize="12sp"/>
+
+            <ImageView
+                android:id="@+id/strengthImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.4"
+                android:src="@drawable/ic_strong"
+                android:visibility="gone"
+                android:layout_gravity="center_vertical"
+                android:paddingRight="15dp"
+                android:layout_marginRight="3dp"/>
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        android:textFontWeight="500"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="4dp"
         android:layout_marginRight="38dp"
@@ -161,7 +168,6 @@
         android:textSize="10sp" />
 
     <com.google.android.material.textfield.TextInputLayout
-
 
         android:id="@+id/confirmPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -176,9 +182,9 @@
         app:boxCornerRadiusBottomStart="5dp"
         app:boxCornerRadiusTopEnd="5dp"
         app:boxCornerRadiusTopStart="5dp"
-        app:boxStrokeColor="@color/box_background_color"
         app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
+        app:boxStrokeColor="@color/box_background_color"
+       app:errorEnabled="true"
         app:hintAnimationEnabled="false"
         app:hintEnabled="false">
 
@@ -188,10 +194,11 @@
             android:hint="@string/confirm_password_string"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/hint_color"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint_color"
             android:textSize="12sp"
             app:boxStrokeColor="@color/box_background_color" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -221,12 +228,11 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:drawableRight="@drawable/ic_strong"
             android:hint="CHRI434"
             android:letterSpacing="0.03"
             android:padding="10dp"
             android:singleLine="true"
-            android:textColor="@color/hint_color"
+            android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="12sp"
 
@@ -239,7 +245,6 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="28dp"
-
         android:layout_marginRight="38dp"
         android:text="@string/by_signing_"
         android:textColor="@color/hint_color"
