--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -188,8 +188,8 @@
         android:layout_marginTop="32dp"
         android:backgroundTint="#2D8DFF"
         android:lineHeight="17sp"
-        android:paddingTop="10dp"
-        android:paddingBottom="11dp"
+
+
         android:text="Login"
         android:textAllCaps="false"
         android:textFontWeight="700"
@@ -200,12 +200,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginLeft="107dp"
+
+        android:layout_marginLeft="74dp"
         android:layout_marginTop="32dp"
-        android:layout_marginRight="106dp"
-        android:orientation="horizontal"
-        android:textAlignment="center">
+        android:layout_marginRight="74dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -217,7 +216,7 @@
 
         <TextView
             android:id="@+id/signupnow_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" Sign Up Now"
             android:textColor="#2D8DFF"
