--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -70,7 +70,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        
         android:layout_marginTop="42dp">
 
         <TextView
@@ -145,8 +145,8 @@
         android:layout_marginTop="44dp"
         android:backgroundTint="#2D8DFF"
         android:lineHeight="17sp"
-        android:paddingTop="10dp"
-        android:paddingBottom="11dp"
+
+
         android:text="Get Started!"
         android:textAllCaps="false"
         android:textStyle="bold"
@@ -157,12 +157,12 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+
         android:layout_marginLeft="107dp"
         android:layout_marginTop="28dp"
         android:layout_marginRight="106dp"
         android:orientation="horizontal"
-        android:textAlignment="center">
+        >
 
         <TextView
             android:layout_width="wrap_content"
@@ -174,7 +174,7 @@
 
         <TextView
             android:id="@+id/already_acnt_login_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" Login"
             android:textColor="#2D8DFF"
