--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -127,6 +127,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Email ID"
+            android:inputType="textEmailAddress"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/black"
@@ -153,14 +154,13 @@
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
         app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#AFADAD">
+        app:hintEnabled="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Password"
+            android:inputType="textPassword"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/black"
@@ -204,8 +204,7 @@
         android:text="@string/dont_have"
         android:textSize="12sp"
         android:layout_marginTop="32dp"
-        android:layout_marginRight="74dp"
-        android:layout_marginLeft="74dp"/>
+        android:gravity="center_horizontal"/>
 
 
 </LinearLayout>
