--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -128,6 +128,7 @@
             android:layout_height="match_parent"
             android:hint="Email ID"
             android:padding="10dp"
+            android:inputType="textEmailAddress"
             android:singleLine="true"
             android:textColor="#AFADAD"
             android:textColorHint="#AFADAD"
@@ -155,7 +156,7 @@
         app:elevation="4dp" />
 
     <TextView
-        android:id="@+id/already_acnt_login_text"
+        android:id="@+id/signup_already_acnt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/alreay_have"
